# rules_js-peer-and-dev-dep-ignored

./: .bazelignore  README.md  WORKSPACE
pkg/: BUILD.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
pkg/consumes-ps/: BUILD.bazel  index.js  index.test.js  package.json
pkg/pad-surround/: BUILD.bazel  index.js  index.test.js  package.json
