load("@npm//:defs.bzl", "npm_link_all_packages")
npm_link_all_packages(name = "node_modules")

exports_files(["package.json"])

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")

js_library(
    name = "consumes-ps",
    srcs = [
        "package.json",
        "index.js",
    ]
)

js_test(
    name = "test",
    data = [":consumes-ps", ":node_modules"],
    entry_point = "index.test.js",
)
